# folder-cleaner-extension

./: REAMDE.md  folder-cleaner-script.py  meson.build  myscript.py
po/: POTFILES.in  com.gitlab.Latesil.folder-cleaner-extension.pot  com.gitlab.Latesil.folder-cleaner.pot  meson.build  nl.po  ru.po
rpm/: folder-cleaner-extension.spec
script/: folder-cleaner-extension.py  meson.build
